--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -1,4 +1,6 @@
-<article class="project list box quarter {% for type in project.project_types.all %}{{ type.name|lower }}&nbsp;{% endfor %}">
+<article class="project list box quarter
+               {% for type in project.project_types.all %}{{ type.slug }}&nbsp;{% endfor %}
+               {% for type in project.landscape_types.all %}{{ type.slug }}&nbsp;{% endfor %}">
     <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
     <section>
         {% for image in project.projectimage_set.all %}
