adding js for project filtering

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -116,7 +116,7 @@
 
     $(document).ready(function() {
         Square();
-        ProjectFilter();
+        //ProjectFilter();
     });
 
     $(window).resize(function() {
