--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -25,7 +25,7 @@
     {% endblock mobile_viewport %}
 
     {% block favicons %}
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}images/favicon.ico" />
     {% endblock favicons %}
 
     {% block css %}
