--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -16,7 +16,7 @@
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
                  class="flex"
-                 src="{{ employee.list.url }}" />
+                 src="{{ employee.thumbnail.url }}" />
             </a> 
         </article>
     {%  endfor %}
@@ -26,7 +26,7 @@
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
                  class="flex"
-                 src="{{ employee.list.url }}" />
+                 src="{{ employee.thumbnail.url }}" />
             </a>
         </article>
     {%  endfor %}
@@ -36,7 +36,7 @@
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
                  class="flex"
-                 src="{{ employee.list.url }}" />
+                 src="{{ employee.thumbnail.url }}" />
             </a>
         </article>
     {%  endfor %}
