adding js for project filtering

--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -21,7 +21,7 @@
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
                  class="flex"
-                 src="{{ employee.list.url }}" />
+                 src="{{ employee.thumbnail.url }}" />
             </a>
         </article>
     {% endfor %}
