--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -483,7 +483,8 @@ body.studio .content {
 
 body.research .main,
 body.studio.news .main{
-    background:url('images/corner-bg-top-right.png') no-repeat right top;
+    background:url('images/corner-bg-top-right.png') no-repeat right top,
+    url('images/vertical-bg.png') no-repeat left 25%;
 }
 
 /********** HOMEPAGE ***********/
