--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -184,6 +184,7 @@ body > footer {
     width:100%;
     overflow: hidden;
     font-family: purista-web-1,purista-web-2, sans-serif;
+    margin-bottom:20px;
 }
 
 body > footer > .contact a:link,
