--- a/futuregreen/templates/studio/includes/news.html
+++ b/futuregreen/templates/studio/includes/news.html
@@ -17,6 +17,10 @@
             {%  endif %}
             {%  endfor %}
             {{ news.body_html|safe }}
+            {%  for item in news.newsitemfile_set.all %}
+                {{ item.file }} {{ item. }}
+            {% endfor %}
+            {%  endif %}
              {%  for item in news.newsitemproject_set.all %}
                 <article class="project related">
                     <figure class="seventh">
