--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -438,6 +438,7 @@ article.project.list img {
 
 article.project.related {
     margin-top:10px;
+    clear:both;
 }
 
 article.project.related section {
