--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -329,6 +329,10 @@ h1.overlay {
     color:#fff;"
 }
 
+.file-list {
+    margin: 10px 0;
+}
+
 .linked-list {
     list-style-type: square;
     margin-left:15px;
