--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -440,6 +440,10 @@ article.project.list img {
     display:block;
 }
 
+section.related-projects {
+    margin-top:10px;
+}
+
 article.project.related {
     margin-top:10px;
     clear:both;
