--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1,93 +1,25 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+/****** FONTS *****/
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-a,
-a:link,
-a:active,
-a:visited {
-    /*color: #6699ff;*/
-    color:#3d6e31;
-}
-
-a:hover {
-    color:#8ec42a;
-}
-
-html {
-    /*background: #efefef;*/
-}
-
-body {
-    min-width:1024px;
-    /*max-width:1440px;*/
-    padding:10px;
-    position:relative;
-    font-weight:normal;
     font-size:87.5%;
     font-family: kulturista-web-1,kulturista-web-2, Arial, Helvetica, sans-serif;
+    font-weight:normal;
     color:#444;
 }
 
-h1, h2 {
-    margin: 0;
-    padding: 0;
-    font-weight:normal;
+body > header {
+    font-family: purista-web-1,purista-web-2, sans-serif;
 }
 
 h1 {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.71428em;
     text-transform: uppercase;
+    font-weight:normal;
 }
 
 h2 {
     font-size: 1.28571em;
+    font-weight:normal;
 }
 
 h3 {
@@ -104,12 +36,19 @@ div,p,ul,ol,section,article {
     line-height: 1.5em;
 }
 
+
+/***** LAYOUT *****/
+body {
+    min-width:1024px;
+    padding:10px;
+    position:relative;
+}
+
 body > header {
     height:80px;
     width:100%;
     background: transparent;
     overflow: hidden;
-    font-family: purista-web-1,purista-web-2, sans-serif;
 }
 
 body > header > h1 {
@@ -265,6 +204,18 @@ body > footer > .contact {
     clear:both;
 }
 
+/***** LINKS *****/
+a,
+a:link,
+a:active,
+a:visited {
+    color:#3d6e31;
+}
+
+a:hover {
+    color:#8ec42a;
+}
+
 .tease,
 .tease:visited,
 .tease:active,
@@ -281,6 +232,13 @@ body > footer > .contact {
 .tease:after {
     content: " \00BB";
 }
+
+a.wraplink {
+    text-decoration: none;
+    color:inherit;
+}
+
+/***** GLOBAL STYLES *****/
 
 .box {
      -webkit-box-sizing: border-box;
@@ -341,11 +299,6 @@ h1.overlay {
 
 .linked-list li {
     margin-bottom:5px;
-}
-
-a.wraplink {
-    text-decoration: none;
-    color:inherit;
 }
 
 .video-container {
@@ -409,7 +362,6 @@ article.project.list:hover header {
 article.project.list header h1 {
     font-size: 1.28571em;
     line-height:1em;
-    /*background:rgba(0,0,0,0.3);*/
     -moz-box-shadow: inset 0px 0px 96px rgba(0,0,0,0.9);
     -webkit-box-shadow: inset 0px 0px 96px rgba(0,0,0,0.9);
     box-shadow: inset 0px 0px 96px rgba(0,0,0,0.9);
@@ -583,7 +535,6 @@ body.studio.news .main{
 .categories {
     overflow: hidden;
     clear:both;
-    /*margin: 10px;*/
 }
 
 .categories li {
@@ -623,16 +574,14 @@ body.studio.news .main{
 
 
 .categories .project-type {
-    /*background:#d27193;*/
     background:#3d6e31;
 }
 
 .categories .landscape-type {
-    /*background:#7eac32;*/
     background:#8ec42a;
 }
 
-/*********** PROJECT LIST ************/
+/**** project list *****/
 .portfolio aside > nav {
     font-size:.85em;
 }
@@ -645,7 +594,7 @@ body.studio.news .main{
     display:block;
 }
 
-/*********** PROJECT DETAIL ************/
+/***** project detail *****/
 .portfolio article.project.detail {
     position:relative;
     overflow: hidden;
@@ -676,10 +625,6 @@ body.studio.news .main{
     margin: 10px;
     background:url('images/vertical-bg.png') no-repeat right bottom,
                url('images/bottom-bg.png') no-repeat left bottom;
-
-}
-
-.slideshow .carousel .slides {
 
 }
 
@@ -740,7 +685,6 @@ body.studio.news .main{
 .slideshow .controls img {
     width:100%;
     display:block;
-    /*border: 1px solid #fff;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
@@ -752,57 +696,9 @@ body.studio.news .main{
 
 .slideshow .controls a.active img,
 .slideshow .controls a:hover img {
-    /*border: 1px solid #999;*/
     opacity:1.0;
     filter:alpha(opacity=100); /* For IE8 and earlier */
 }
-
-/*
-.slideshow nav.expand {
-    position:absolute;
-    width:42.85714%;
-    left:28.5714286%;
-    height:100%;
-    background: transparent;
-    z-index:20000;
-    text-align: center;
-}
-
-.slideshow nav.expand a,
-.slideshow nav.expand a:link,
-.slideshow nav.expand a:hover,
-.slideshow nav.expand a:active,
-.slideshow nav.expand a:visited {
-    position:relative;
-    display:block;
-    top:50%;
-    width:80px;
-    height:80px;
-    margin:-50px auto 0 auto;
-    text-align:center;
-    text-decoration: none;
-    line-height:80px;
-    opacity:0;
-    color:#fff;
-    -webkit-transition: all .5s ease-in;
-    -moz-transition: all .5s ease-in;
-    -o-transition: all .5s ease-in;
-    -ms-transition: all .5s ease-in;
-    -transition: all .5s ease-in;
-    background: rgba(0,0,0,0.5);
-    font-size:6em;
-    font-family:monospace;
-}
-
-.slideshow nav.expand:hover a {
-   opacity:1.0;
-   -webkit-transition: all .5s ease-in;
-   -moz-transition: all .5s ease-in;
-   -o-transition: all .5s ease-in;
-   -ms-transition: all .5s ease-in;
-   -transition: all .5s ease-in;
-}
-*/
 
 .slideshow nav.expand {
     position:absolute;
@@ -905,8 +801,6 @@ body.studio.news .main{
     float:left;
 }
 
-
-
 .slideshow .flex-direction-nav a {
     display:block;
     float:left;
@@ -958,8 +852,6 @@ body.studio.news .main{
     width:41.66667%;
     margin:0;
     overflow: hidden;
-    /*background:url('images/corner-bg-top-right.png') no-repeat right top;*/
-
 }
 
 .details h1 {
@@ -1021,7 +913,6 @@ body.studio.news .main{
     margin: 0 0 0 0;
     overflow: auto;
 }
-
 
 .details .meta .info-boxes ul li {
     overflow: auto;
