--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -29,7 +29,11 @@
     {% endblock favicons %}
 
     {% block css %}
+    {% load compress %}
+    {% compress css %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
+    {% endcompress %}
     <!-- Uncomment if you are specifically targeting less enabled mobile browsers
     <link rel="stylesheet" media="handheld" href="css/handheld.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="small.css" />
@@ -40,10 +44,12 @@
     {% endblock css %}
 
     {% block js_head %}
+    {% compress js %}
     <!-- All JavaScript at the bottom, except for Modernizr / Respond. -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
     <script type="text/javascript" src="http://use.typekit.com/uyl4qjv.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    {% endcompress %}
     {% endblock js_head %}
 
     {% block extra_head %}
@@ -82,6 +88,7 @@
     <!-- JavaScript at the bottom for fast page loading -->
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
+    {% compress js %}
     {% block js_frameworks %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery-1.6.2.min.js">\x3C/script>')</script>
@@ -89,16 +96,7 @@
 
     {% block js_global %}
     <script type="text/javascript">
-        function Square() {
-                $('.square').each(function(){
-                    width = $(this).width();
-                    $(this).css('height',width);
-                });
-                $('.center').each(function(){
-                    width = $(this).width();
-                    $(this).css('line-height',width + "px");
-                });
-        }
+        <script type="text/javascript" src="{{ STATIC_URL }}js/utils.js"></script>
     </script>
     {% endblock js_global %}
 
@@ -106,7 +104,7 @@
     {% endblock js_local %}
 
     {% block google_analytics %}
-    <script>
+    <script type="text/javascript">
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview'],['_trackPageLoadTime']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
     g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
@@ -122,7 +120,7 @@
     <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
     <![endif]-->
     {% endblock browser_prompt %}
-
+    {% endcompress %}
 {% endblock body %}
 </body>
 </html>
