--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -284,7 +284,7 @@ h1.overlay {
     font-size:2.4em;
     line-height:1em;
     margin:-.95em 0 0 10px;
-    color:#fff;"
+    color:#fff;
 }
 
 .file-list {
