added google analytics code

--- a/futuregreen/templates/500.html
+++ b/futuregreen/templates/500.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block section_title %}: 500 - Page Not Found {% endblock section_title %}
 {% load generic_flatblocks %}
 <section class="main two-thirds">
     <article class="box">
