--- a/futuregreen/templates/404.html
+++ b/futuregreen/templates/404.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block section_title %}: 404 - Page Not Found {% endblock section_title %}
+{% block content %}
 {% load generic_flatblocks %}
 <section class="main two-thirds">
     <article class="box">
