added readme text

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -75,7 +75,7 @@
     {% block footer %}
     <footer>
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
-        <span class="contact">92 3rd Street Brooklyn, NY 11231&nbsp;&nbsp;|&nbsp;&nbsp;t. 718.855.8995&nbsp;&nbsp;|&nbsp;&nbsp;f. 718-228-7004&nbsp;&nbsp;|&nbsp;&nbsp;<a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
+        <span class="contact">92 3rd Street Brooklyn, NY 11231&nbsp;&nbsp;|&nbsp;&nbsp;t. 718.855.8995&nbsp;&nbsp;|&nbsp;&nbsp;f. 718.228.7004&nbsp;&nbsp;|&nbsp;&nbsp;<a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
     </footer>
     {% endblock footer %}
 
