--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -74,8 +74,9 @@
     
     {% block footer %}
     <footer>
+        {% load generic_flatblocks %}
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
-        <span class="contact">92 3rd Street Brooklyn, NY 11231&nbsp;&nbsp;|&nbsp;&nbsp;t. 718.855.8995&nbsp;&nbsp;|&nbsp;&nbsp;f. 718.228.7004&nbsp;&nbsp;|&nbsp;&nbsp;<a href="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
+        <span class="contact">{%  gblock "footer_contact" for "content.ContentBlock" with content/simple.html %}</span>
     </footer>
     {% endblock footer %}
 
