added dynamic footer text

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -76,7 +76,7 @@
     <footer>
         {% load generic_flatblocks %}
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
-        <span class="contact">{%  gblock "footer_contact" for "content.ContentBlock" with "content/simple.html" %}</span>
+        <span class="contact">{%  gblock "footer_contact" for "content.ContentBlock" with "content/contentblock/simple.html" %}</span>
     </footer>
     {% endblock footer %}
 
