--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1050,6 +1050,7 @@ ul#project-nav {
 
 .max .details .description {
     width:66.66667%;
+    margin-right:16.66667%;
     -webkit-column-count:2;
     -moz-column-count:2;
     -o-column-count:2;
