--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1051,6 +1051,7 @@ ul#project-nav {
 .max .details .description {
     width:66.66667%;
     margin-right:16.66667%;
+    padding-right:20px;
     -webkit-column-count:2;
     -moz-column-count:2;
     -o-column-count:2;
