edited prev/next behavior

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -183,7 +183,7 @@
             slideToStart: 0,
             animationLoop: true,
             pauseOnAction: true,
-            pauseOnHover: false,
+            pauseOnHover: true,
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
