--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -20,8 +20,8 @@
     {% endblock metadata %}
 
     {% block mobile_viewport %}
-    <!--<meta name="viewport" content="minimum-scale=1.0, maximum-scale=1.0,
-	                               width=device-width, user-scalable=no">-->
+    <meta name="viewport" content="minimum-scale=1.0, maximum-scale=1.0,
+	                               width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     {% endblock mobile_viewport %}
