--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1176,6 +1176,8 @@ ul#project-nav {
         font-size:8px;
         width:100%;
         overflow: hidden;
+        margin: 0;
+        padding: 0;
     }
 
     body > header > nav {
