--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1187,6 +1187,11 @@ ul#project-nav {
     }
 
     body > header > nav li {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -o-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
         float:left;
         line-height:80px;
         text-align: center;
@@ -1202,7 +1207,7 @@ ul#project-nav {
         width:100%;
     }
 
-    body.home > .content > div > article.project {
+    body.home > div:first-child article.project {
         display:none;
     }
 
